--- a/test/fixtures/games.yml
+++ b/test/fixtures/games.yml
@@ -21,3 +21,37 @@ two:
   tournament: MyText
   lineup: MyText
   scorer: MyText
+
+three:
+  date: 2016-04-02 17:54:24
+  home_team: MyText
+  away_team: MyText
+  home_gf: 1
+  away_gf: 1
+  venue: MyText
+  tournament: MyText
+  lineup: MyText
+  scorer: MyText
+
+four:
+  date: 2016-04-02 17:54:24
+  home_team: MyText
+  away_team: MyText
+  home_gf: 1
+  away_gf: 1
+  venue: MyText
+  tournament: MyText
+  lineup: MyText
+  scorer: MyText
+
+five:
+  date: 2016-04-02 17:54:24
+  home_team: MyText
+  away_team: MyText
+  home_gf: 1
+  away_gf: 1
+  venue: MyText
+  tournament: MyText
+  lineup: MyText
+  scorer: MyText
+
